Update .gitignore to exclude strategic planning documents
- Ignore ROADMAP.md, VISION*, STRATEGIC_ANALYSIS.md, CRITICS.md
- Keep strategic documents out of repository while preserving code

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-./ROADMAP.md
-./VISION*
-./STRATEGIC_ANALYSIS.md
-./CRITICS.md
+ROADMAP.md
+VISION*
+STRATEGIC_ANALYSIS.md
+CRITICS.md
 
-./data/*
+data/*
